--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
             </div></a>
             <div id="acw-links">
                 <div id="nav-spacer"></div>
-                <div class="nav-link" id="a-link"><a href="/pages/about.html" alt="Go to About Page">About</a></div>
+                <div class="nav-link" id="a-link"><a href="/pages/about.html" alt="Go to About Page" id="true-link">About</a></div>
                 <div class="nav-link" id="c-link"><a href="/pages/contact.html" alt="Go to Contact Page">Contact</a></div>
                 <div class="nav-link" id="w-all">
                     <input type="checkbox" id="genres">
@@ -65,8 +65,10 @@
                     <div class="cap-body"><p>John Cowen has been living and working as a landscape designer in the Hamptons for the past 25+ years. Since 1994 he has operated his own design and build company.<br><br>The company has been involved in projects ranging from $500 to $2m+.<br><br>John has been involved in the landscape industry for 30+ years including 8 years of training as a Landscape Architect at Greenwich University, including a Horticultural degree equivalent from Merrist Wood College, Surrey, England.<br><br>The combined experience, professionalism and knowledge within John Cowen Landscape Associates Ltd. makes the company unique and stand out from other landscape companies in the Hamptons.</p></div>
                 </div>
                 <div class="awards">
-                    <img src="/Images/asla-new-logo.png" alt="American Society of Landscape Architects Association Badge">
-                    <img src="/Images/PulseOfTheCity/PULSE-RIBBON.png">
+                    <img style="border-radius: 0px;" src="/Images/asla-new-logo.png" alt="American Society of Landscape Architects Association Badge">
+                    <img src="/Images/PulseOfTheCity/PULSE-RIBBON.png" alt="Pulse of the City Winner's Circle">
+                        <img src="/Images/BUILD1@2x.png" alt="BUILD Architecture Awards - Best Landscape Design/Build Company">
+                        <img src="/Images/BUILD3@2x.png" alt="BUILD Architecture Awards - Client Service Excellence">
                 </div>
                 <img src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by JCLA">
                 <div class="caption-box" id="general-cap">
