--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,7 @@
             <div id="acw-links">
                 <div id="nav-spacer"></div>
                 <div class="nav-link" id="a-link"><a href="/pages/about.html" alt="Go to About Page">About</a></div>
-                <div class="nav-link" id="c-link"><a href="/pages/contact.html" alt="Go to Contact Page">Contact</a></div>
+                <div class="nav-link" id="c-link"><a id="true-link" href="/pages/contact.html" alt="Go to Contact Page">Contact</a></div>
                 <div class="nav-link" id="w-all">
                     <input type="checkbox" id="genres">
                     <label for="genres" id="w-link">
