--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         <div class="content-box">
             <script src="/flickity.pkgd.min.js"></script>
             <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true }'>
-                <div class="carousel-cell"><img src="Images/PrevPhotos/Home/Cottages.jpg" alt=""></div>
-                <div class="carousel-cell"><img src="Images/PrevPhotos/Home/DeerResistant.jpg" alt=""></div>
-                <div class="carousel-cell"><img src="Images/PrevPhotos/Home/Estates.jpg" alt=""></div>
-                <div class="carousel-cell"><img src="Images/PrevPhotos/Home/Pools.jpg" alt=""></div>
-                <div class="carousel-cell"><img src="Images/PrevPhotos/Home/Roths.jpg" alt=""></div>
-                <div class="carousel-cell"><img src="Images/PrevPhotos/Home/SingleFamily.jpg" alt=""></div>
-                <div class="carousel-cell"><img src="Images/PrevPhotos/Home/Waterfront.jpg" alt=""></div>
+                <div class="carousel-cell"><a href="/pages/categories/cottages.html" alt="Go to Cottages"><img src="Images/NewPhotos/COTTAGE/Cottages0.jpeg" alt=""></a></div>
+                <div class="carousel-cell"><a href="/pages/categories/estates.html" alt="Go to Estates"><img src="Images/NewPhotos/ESTATES/Estates0.jpg" alt=""></a></div>
+                <div class="carousel-cell"><a href="pages/categories/plantings.html" alt="Go to Plantings"><img src="Images/NewPhotos/GARDEN/Garden0.jpg" alt=""></a></div>
+                <div class="carousel-cell"><a href="/pages/categories/pools.html" alt="Go to Pool Gardens"><img src="Images/NewPhotos/PLANTING/Planting2.jpeg" alt=""></a></div>
+                <div class="carousel-cell"><a href="/pages/categories/specialty.html" alt="Go to Specialty"><img src="Images/PrevPhotos/Specialty/Specialty5.jpg" alt=""></a></div>
+                <div class="carousel-cell"><a href="/pages/categories/singlefamily.html" alt="Go to Single Family"><img src="Images/PrevPhotos/SingleFamily/SingleFamily8.jpg" alt=""></a></div>
+                <div class="carousel-cell"><a href="/pages/categories/waterfront.html" alt="Go to Waterfront"><img src="Images/PrevPhotos/Home/Waterfront.jpg" alt=""></a></div>
             </div>
         </div>
     </main>
