--- a/pages/about.html
+++ b/pages/about.html
@@ -12,63 +12,72 @@
 <link rel="stylesheet" href="/flickity.css" media="screen">
 </head>
 
-
-    <!-- Enter Header -->
-    <header>
-        <nav id="header" aria-label="nav-bar">
-            <a href="/index.html" alt="Go to Homepage"><div id="home-button">
-                <div id="home-logo">
-                    <div id="jcla-shape"></div>
-                </div>
-                <div id="home-name">
-                    <div id="home-first">John Cowen</div><div id="home-last">Landscape Associates</div>
-                </div>
-            </div></a>
-            <div id="acw-links">
-                <div id="nav-spacer"></div>
-                <div class="nav-link" id="a-link"><a href="/pages/about.html" alt="Go to About Page" id="true-link">About</a></div>
-                <div class="nav-link" id="c-link"><a href="/pages/contact.html" alt="Go to Contact Page">Contact</a></div>
-                <div class="nav-link" id="w-all">
-                    <input type="checkbox" id="genres">
-                    <label for="genres" id="w-link">
-                        <div>Work</div>
-                    </label>
-                    <div id="categories">
-                        <ul>
-                            <li><a href="/pages/categories/estates.html" alt="Go to Estates">Estates</a></li>
-                            <li><a href="/pages/categories/singlefamily.html" alt="Go to Single Family">Single Family</a></li>
-                            <li><a href="/pages/categories/cottages.html" alt="Go to Cottages">Cottages</a></li>
-                            <li><a href="/pages/categories/waterfront.html" aria-multiline="Go to Waterfront">Waterfront</a></li>
-                            <li><a href="/pages/categories/shady.html" alt="Go to Shady">Shady</a></li>
-                            <li><a href="/pages/categories/deerresist.html" alt="Go to Deer Resistant">Deer Resistant</a></li>
-                            <li><a href="/pages/categories/specialty.html" alt="Go to Specialty">Specialty</a></li>
-                            <li><a href="/pages/categories/pools.html" alt="Go to Pool Gardens">Pool Gardens</a></li>
-                            <li><a href="/pages/categories/hardscapes.html" alt="Go to Hardscapes">Hardscapes</a></li>
-                            <li><a href="/pages/categories/reveg.html" alt="Go to Revegetation">Revegetation</a></li>
-                            <li><a href="/pages/categories/plantings.html" alt="Go to Plantings">Plantings</a></li>
-                            <li><a href="/pages/categories/maintain.html" alt="Go to Maintenance">Maintenance</a></li>
-                            <li><a href="/pages/categories/fencing.html" alt="Go to Fencing">Fencing</a></li>
-                            <li><a href="/pages/categories/transplants.html" alt="Go to Transplants">Transplants</a></li>
-                        </ul>
+<body>
+     <!-- Enter Header -->
+     <header>
+        <div id="head-box">
+            <a href="/index.html" alt="Go to Homepage">
+                <div id="home-button">
+                    <div id="home-logo">
+                        <div id="jcla-shape"></div>
+                    </div>
+                    <div id="home-name">
+                        <div id="home-first">John Cowen</div>
+                        <div id="home-last">Landscape Associates</div>
                     </div>
                 </div>
-            </div>
-        </nav>
+            </a>
+        </div>
     </header>
     <!-- Exit Header -->
+    <!-- Enter Nav -->
+    <nav id="menu-buttons" aria-label="nav-bar">
+        <div id="acw-links">
+            <div class="nav-link" id="a-link">
+                <a href="/pages/about.html" alt="Go to About Page">About</a>
+            </div>
+            <div class="nav-link" id="c-link">
+                <a href="/pages/contact.html" alt="Go to Contact Page">Contact</a>
+            </div>
+            <div class="nav-link" id="w-all">
+                <input type="checkbox" id="genres">
+                <label for="genres" id="w-link">
+                    <div>Work</div>
+                </label>
+                <div id="categories">
+                    <ul>
+                        <li><a href="/pages/categories/estates.html" alt="Go to Estates">Estates</a></li>
+                        <li><a href="/pages/categories/singlefamily.html" alt="Go to Single Family">Single Family</a></li>
+                        <li><a href="/pages/categories/cottages.html" alt="Go to Cottages">Cottages</a></li>
+                        <li><a href="/pages/categories/waterfront.html" aria-multiline="Go to Waterfront">Waterfront</a></li>
+                        <li><a href="/pages/categories/shady.html" alt="Go to Shady">Shady</a></li>
+                        <li><a href="/pages/categories/deerresist.html" alt="Go to Deer Resistant">Deer Resistant</a></li>
+                        <li><a href="/pages/categories/specialty.html" alt="Go to Specialty">Specialty</a></li>
+                        <li><a href="/pages/categories/pools.html" alt="Go to Pool Gardens">Pool Gardens</a></li>
+                        <li><a href="/pages/categories/hardscapes.html" alt="Go to Hardscapes">Hardscapes</a></li>
+                        <li><a href="/pages/categories/reveg.html" alt="Go to Revegetation">Revegetation</a></li>
+                        <li><a href="/pages/categories/plantings.html" alt="Go to Plantings">Plantings</a></li>
+                        <li><a href="/pages/categories/maintain.html" alt="Go to Maintenance">Maintenance</a></li>
+                        <li><a href="/pages/categories/fencing.html" alt="Go to Fencing">Fencing</a></li>
+                        <li><a href="/pages/categories/transplants.html" alt="Go to Transplants">Transplants</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Exit Nav -->
     <main>
-        <div class="content-box">
-            <div class="info-box">
+        <div class="content-box" id="about-box">
                 <img src="/Images/JC.png" alt="John Cowen stands in front of a landscaping job he and his team have completed">
                 <div class="caption-box" id="general-cap">
                     <div class="cap-head"><h1>John Cowen</h1></div>
                     <div class="cap-body"><p>John Cowen has been living and working as a landscape designer in the Hamptons for the past 25+ years. Since 1994 he has operated his own design and build company.<br><br>The company has been involved in projects ranging from $500 to $2m+.<br><br>John has been involved in the landscape industry for 30+ years including 8 years of training as a Landscape Architect at Greenwich University, including a Horticultural degree equivalent from Merrist Wood College, Surrey, England.<br><br>The combined experience, professionalism and knowledge within John Cowen Landscape Associates Ltd. makes the company unique and stand out from other landscape companies in the Hamptons.</p></div>
                 </div>
                 <div class="awards">
-                    <img style="border-radius: 0px;" src="/Images/asla-new-logo.png" alt="American Society of Landscape Architects Association Badge">
+                    <img src="/Images/asla-new-logo.png" alt="American Society of Landscape Architects Association Badge">
                     <img src="/Images/PulseOfTheCity/PULSE-RIBBON.png" alt="Pulse of the City Winner's Circle">
-                        <img src="/Images/BUILD1@2x.png" alt="BUILD Architecture Awards - Best Landscape Design/Build Company">
-                        <img src="/Images/BUILD3@2x.png" alt="BUILD Architecture Awards - Client Service Excellence">
+                    <img src="/Images/BUILD1@2x.png" alt="BUILD Architecture Awards - Best Landscape Design/Build Company">
+                    <img src="/Images/BUILD3@2x.png" alt="BUILD Architecture Awards - Client Service Excellence">
                 </div>
                 <img src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by JCLA">
                 <div class="caption-box" id="general-cap">
@@ -96,7 +105,6 @@
                             </ul>
                     </div>
                 </div>
-            </div>
         </div>
     </main>
 </body>
