--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,53 +12,62 @@
 <link rel="stylesheet" href="/flickity.css" media="screen">
 </head>
 
-
+<body>
     <!-- Enter Header -->
     <header>
-        <nav id="header" aria-label="nav-bar">
-            <a href="/index.html" alt="Go to Homepage"><div id="home-button">
-                <div id="home-logo">
-                    <div id="jcla-shape"></div>
-                </div>
-                <div id="home-name">
-                    <div id="home-first">John Cowen</div><div id="home-last">Landscape Associates</div>
-                </div>
-            </div></a>
-            <div id="acw-links">
-                <div id="nav-spacer"></div>
-                <div class="nav-link" id="a-link"><a href="/pages/about.html" alt="Go to About Page">About</a></div>
-                <div class="nav-link" id="c-link"><a id="true-link" href="/pages/contact.html" alt="Go to Contact Page">Contact</a></div>
-                <div class="nav-link" id="w-all">
-                    <input type="checkbox" id="genres">
-                    <label for="genres" id="w-link">
-                        <div>Work</div>
-                    </label>
-                    <div id="categories">
-                        <ul>
-                            <li><a href="/pages/categories/estates.html" alt="Go to Estates">Estates</a></li>
-                            <li><a href="/pages/categories/singlefamily.html" alt="Go to Single Family">Single Family</a></li>
-                            <li><a href="/pages/categories/cottages.html" alt="Go to Cottages">Cottages</a></li>
-                            <li><a href="/pages/categories/waterfront.html" aria-multiline="Go to Waterfront">Waterfront</a></li>
-                            <li><a href="/pages/categories/shady.html" alt="Go to Shady">Shady</a></li>
-                            <li><a href="/pages/categories/deerresist.html" alt="Go to Deer Resistant">Deer Resistant</a></li>
-                            <li><a href="/pages/categories/specialty.html" alt="Go to Specialty">Specialty</a></li>
-                            <li><a href="/pages/categories/pools.html" alt="Go to Pool Gardens">Pool Gardens</a></li>
-                            <li><a href="/pages/categories/hardscapes.html" alt="Go to Hardscapes">Hardscapes</a></li>
-                            <li><a href="/pages/categories/reveg.html" alt="Go to Revegetation">Revegetation</a></li>
-                            <li><a href="/pages/categories/plantings.html" alt="Go to Plantings">Plantings</a></li>
-                            <li><a href="/pages/categories/maintain.html" alt="Go to Maintenance">Maintenance</a></li>
-                            <li><a href="/pages/categories/fencing.html" alt="Go to Fencing">Fencing</a></li>
-                            <li><a href="/pages/categories/transplants.html" alt="Go to Transplants">Transplants</a></li>
-                        </ul>
+        <div id="head-box">
+            <a href="/index.html" alt="Go to Homepage">
+                <div id="home-button">
+                    <div id="home-logo">
+                        <div id="jcla-shape"></div>
+                    </div>
+                    <div id="home-name">
+                        <div id="home-first">John Cowen</div>
+                        <div id="home-last">Landscape Associates</div>
                     </div>
                 </div>
+            </a>
+        </div>
+</header>
+<!-- Exit Header -->
+<!-- Enter Nav -->
+<nav id="menu-buttons" aria-label="nav-bar">
+    <div id="acw-links">
+        <div class="nav-link" id="a-link">
+            <a href="/pages/about.html" alt="Go to About Page">About</a>
+        </div>
+        <div class="nav-link" id="c-link">
+            <a href="/pages/contact.html" alt="Go to Contact Page">Contact</a>
+        </div>
+        <div class="nav-link" id="w-all">
+            <input type="checkbox" id="genres">
+            <label for="genres" id="w-link">
+                <div>Work</div>
+            </label>
+            <div id="categories">
+                <ul>
+                    <li><a href="/pages/categories/estates.html" alt="Go to Estates">Estates</a></li>
+                    <li><a href="/pages/categories/singlefamily.html" alt="Go to Single Family">Single Family</a></li>
+                    <li><a href="/pages/categories/cottages.html" alt="Go to Cottages">Cottages</a></li>
+                    <li><a href="/pages/categories/waterfront.html" aria-multiline="Go to Waterfront">Waterfront</a></li>
+                    <li><a href="/pages/categories/shady.html" alt="Go to Shady">Shady</a></li>
+                    <li><a href="/pages/categories/deerresist.html" alt="Go to Deer Resistant">Deer Resistant</a></li>
+                    <li><a href="/pages/categories/specialty.html" alt="Go to Specialty">Specialty</a></li>
+                    <li><a href="/pages/categories/pools.html" alt="Go to Pool Gardens">Pool Gardens</a></li>
+                    <li><a href="/pages/categories/hardscapes.html" alt="Go to Hardscapes">Hardscapes</a></li>
+                    <li><a href="/pages/categories/reveg.html" alt="Go to Revegetation">Revegetation</a></li>
+                    <li><a href="/pages/categories/plantings.html" alt="Go to Plantings">Plantings</a></li>
+                    <li><a href="/pages/categories/maintain.html" alt="Go to Maintenance">Maintenance</a></li>
+                    <li><a href="/pages/categories/fencing.html" alt="Go to Fencing">Fencing</a></li>
+                    <li><a href="/pages/categories/transplants.html" alt="Go to Transplants">Transplants</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
-    <!-- Exit Header -->
+        </div>
+    </div>
+</nav>
+<!-- Exit Nav -->
     <main>
-        <div class="content-box">
-            <div class="info-box">
+        <div class="content-box" id="info-box">
                 <div class="contact-grid">
                     <div id="info-text">
                         <p>John Cowen Landscape Associates LTD.
@@ -68,8 +77,7 @@
                             <br><br>
                             <strong>T:</strong> <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">631-725-3410</a>
                             <br><br>
-                            <strong>E:</strong> <a href="mailto:john@johncowenlandscape.com" alt="Email John Cowen Landscape Associates">john@johncowenlandscape.com</a>
-                        </p>
+                            <strong>E:</strong> <a href="mailto:john@johncowenlandscape.com" alt="Email John Cowen Landscape Associates">john@johncowenlandscape.com</a></p>
                     </div>
                         <iframe id="info-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3013.8096062129953!2d-72.40726698458805!3d40.94183977930743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e89417828614a1%3A0xcbb27c9d10368a51!2s5%20Cove%20Rd%2C%20Southampton%2C%20NY%2011968!5e0!3m2!1sen!2sus!4v1608351278394!5m2!1sen!2sus" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     <div id="info-form">
@@ -93,7 +101,6 @@
                           </form>
                     </div>
                 </div>
-            </div>
         </div>
     </main>
 </body>
