mobile version completed, aria labels added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
             <div id="head-box">
                 <a href="/index.html" alt="Go to Homepage">
-                    <div id="home-button">
+                    <div id="home-button" aria-label="home button">
                         <div id="home-logo">
                             <div id="jcla-shape"></div>
                         </div>
@@ -31,12 +31,14 @@
     </header>
     <!-- Exit Header -->
     <!-- Enter Nav -->
-    <nav id="menu-buttons" aria-label="nav-bar">
+    <nav id="menu-buttons" aria-label="nav bar">
         <div id="acw-links">
             <input type="checkbox" id="mobile-menu">
             <label for="mobile-menu" id="menu-open">
                 <div id="hamburger"></div>
+                <div id="cross"></div>
             </label>
+            <div id="menu-links">
             <div class="nav-link" id="a-link">
                 <a href="/pages/about.html" alt="Go to About Page">About</a>
             </div>
@@ -67,14 +69,15 @@
                     </ul>
                 </div>
             </div>
+            </div>
         </div>
     </nav>
     <!-- Exit Nav -->
     <main>
-        <div class="content-box">
+        <div class="content-box" id="home-box">
             <div class="home-gal">
             <script src="/flickity.pkgd.min.js"></script>
-            <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true }'>
+            <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true }' aria-label="gallery">
                 <div class="carousel-cell"><a href="/pages/categories/cottages.html" alt="Go to Cottages"><img src="Images/NewPhotos/COTTAGE/Cottages0.jpeg" alt=""></a></div>
                 <div class="carousel-cell"><a href="/pages/categories/estates.html" alt="Go to Estates"><img src="Images/NewPhotos/ESTATES/Estates0.jpg" alt=""></a></div>
                 <div class="carousel-cell"><a href="pages/categories/plantings.html" alt="Go to Plantings"><img src="Images/NewPhotos/GARDEN/Garden0.jpg" alt=""></a></div>
