--- a/pages/about.html
+++ b/pages/about.html
@@ -13,28 +13,34 @@
 </head>
 
 <body>
-     <!-- Enter Header -->
-     <header>
-        <div id="head-box">
-            <a href="/index.html" alt="Go to Homepage">
-                <div id="home-button">
-                    <div id="home-logo">
-                        <div id="jcla-shape"></div>
+    <!-- Enter Header -->
+    <header>
+            <div id="head-box">
+                <a href="/index.html" alt="Go to Homepage">
+                    <div id="home-button" aria-label="home button">
+                        <div id="home-logo">
+                            <div id="jcla-shape"></div>
+                        </div>
+                        <div id="home-name">
+                            <div id="home-first">John Cowen</div>
+                            <div id="home-last">Landscape Associates</div>
+                        </div>
                     </div>
-                    <div id="home-name">
-                        <div id="home-first">John Cowen</div>
-                        <div id="home-last">Landscape Associates</div>
-                    </div>
-                </div>
-            </a>
-        </div>
+                </a>
+            </div>
     </header>
     <!-- Exit Header -->
     <!-- Enter Nav -->
-    <nav id="menu-buttons" aria-label="nav-bar">
+    <nav id="menu-buttons" aria-label="nav bar">
         <div id="acw-links">
+            <input type="checkbox" id="mobile-menu">
+            <label for="mobile-menu" id="menu-open">
+                <div id="hamburger"></div>
+                <div id="cross"></div>
+            </label>
+            <div id="menu-links">
             <div class="nav-link" id="a-link">
-                <a href="/pages/about.html" alt="Go to About Page">About</a>
+                <a id="true-link" href="/pages/about.html" alt="Go to About Page">About</a>
             </div>
             <div class="nav-link" id="c-link">
                 <a href="/pages/contact.html" alt="Go to Contact Page">Contact</a>
@@ -62,6 +68,7 @@
                         <li><a href="/pages/categories/transplants.html" alt="Go to Transplants">Transplants</a></li>
                     </ul>
                 </div>
+            </div>
             </div>
         </div>
     </nav>
