--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="content-box" id="home-box">
             <div class="home-gal">
             <script src="/flickity.pkgd.min.js"></script>
-            <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true }' aria-label="gallery">
+            <div class="main-carousel" data-flickity='{ "autoPlay": 2000 "cellAlign": "left", "contain": true, "wrapAround": true }' aria-label="gallery">
                 <div class="carousel-cell"><a href="/pages/categories/cottages.html" alt="Go to Cottages"><img src="Images/NewPhotos/COTTAGE/Cottages0.jpeg" alt=""></a></div>
                 <div class="carousel-cell"><a href="/pages/categories/estates.html" alt="Go to Estates"><img src="Images/NewPhotos/ESTATES/Estates0.jpg" alt=""></a></div>
                 <div class="carousel-cell"><a href="pages/categories/plantings.html" alt="Go to Plantings"><img src="Images/NewPhotos/GARDEN/Garden0.jpg" alt=""></a></div>
