--- a/pages/about.html
+++ b/pages/about.html
@@ -102,13 +102,13 @@
                     <div class="cap-body">
                             <ul id="ldb-list">
                                 <li><p><strong><a href="http://www.theperfecthome.com/books.aspx?bookID=11&stateID=32" target="_blank" alt="Go to theperfecthome.com">NYS Representative as seen in the Garden Bible, Perfect Home</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Captivating-Cottage-Mood.pdf" target="_blank" alt="Download Captivating Cottage Mood PDF">Captivating Cottage Mood</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Great-Backyards-Fire-Pit.pdf" target="_blank" alt="Download Great Backyards Fire Pit PDF">Great Backyard Fires</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Views-From-Every-AngleMontauk.pdf" target="_blank" alt="Download Views from Every Angle PDF">Views from Every Angle</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Contoured-Ensemble.pdf" target="_blank" alt="Downlaod Contoured Ensemble PDF">Contoured Ensemble</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Laps-and-Lounging.pdf" target="_blank" alt="Download Laps and Lounging PDF">Laps and Lounging</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Peace-of-Paradise.pdf" target="_blank" alt="Downlaod Peace of Paradise PDF">Peace of Paradise</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/JCLA-hardcover-portfolio-2-23-10.pdf" target="_blank" alt="Downlaod JCLA Portfolio PDF">John Cowen Portfolio</a></strong></p></li>
+                                <li><p><strong><a href="/pdfs/Captivating-Cottage-Mood.pdf" target="_blank" alt="View Captivating Cottage Mood PDF">Captivating Cottage Mood</a></strong></p></li>
+                                <li><p><strong><a href="/pdfs/Great-Backyards-Fire-Pit.pdf" target="_blank" alt="View Great Backyards Fire Pit PDF">Great Backyard Fires</a></strong></p></li>
+                                <li><p><strong><a href="/pdfs/Views-From-Every-AngleMontauk.pdf" target="_blank" alt="View Views from Every Angle PDF">Views from Every Angle</a></strong></p></li>
+                                <li><p><strong><a href="/pdfs/Contoured-Ensemble.pdf" target="_blank" alt="View Contoured Ensemble PDF">Contoured Ensemble</a></strong></p></li>
+                                <li><p><strong><a href="/pdfs/Laps-and-Lounging.pdf" target="_blank" alt="View Laps and Lounging PDF">Laps and Lounging</a></strong></p></li>
+                                <li><p><strong><a href="/pdfs/Peace-of-Paradise.pdf" target="_blank" alt="View Peace of Paradise PDF">Peace of Paradise</a></strong></p></li>
+                                <li><p><strong><a href="/pdfs/JCLA-hardcover-portfolio-2-23-10.pdf" target="_blank" alt="View JCLA Portfolio PDF">John Cowen Portfolio</a></strong></p></li>
                             </ul>
                     </div>
                 </div>
