ldb + carousel redo.

--- a/pages/about.html
+++ b/pages/about.html
@@ -74,45 +74,35 @@
     </nav>
     <!-- Exit Nav -->
     <main>
-        <div class="content-box" id="about-box">
-                <img src="/Images/JC.png" alt="John Cowen stands in front of a landscaping job he and his team have completed">
-                <div class="caption-box" id="general-cap">
-                    <div class="cap-head"><h1>John Cowen</h1></div>
-                    <div class="cap-body"><p>John Cowen has been living and working as a landscape designer in the Hamptons for the past 25+ years. Since 1994 he has operated his own design and build company.<br><br>The company has been involved in projects ranging from $500 to $2m+.<br><br>John has been involved in the landscape industry for 30+ years including 8 years of training as a Landscape Architect at Greenwich University, including a Horticultural degree equivalent from Merrist Wood College, Surrey, England.<br><br>The combined experience, professionalism and knowledge within John Cowen Landscape Associates Ltd. makes the company unique and stand out from other landscape companies in the Hamptons.</p></div>
-                </div>
-                <div class="awards">
-                    <img src="/Images/asla-new-logo.png" alt="American Society of Landscape Architects Association Badge">
-                    <img src="/Images/PulseOfTheCity/PULSE-RIBBON.png" alt="Pulse of the City Winner's Circle">
-                    <img src="/Images/BUILD1@2x.png" alt="BUILD Architecture Awards - Best Landscape Design/Build Company">
-                    <img src="/Images/BUILD3@2x.png" alt="BUILD Architecture Awards - Client Service Excellence">
-                </div>
-                <img src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by JCLA">
-                <div class="caption-box" id="general-cap">
-                    <div class="cap-head"><h1>John Cowen</h1></div>
-                    <div class="cap-body">
-                            <ul id="ldb-list">
-                                <li><p><strong>Landscape:</strong> We pride ourselves on our extensive landscape knowledge, experience and ability to carry out projects of all kinds.</p></li>
-                                <li><p><strong>Design:</strong> Our philosophy: synthesize the ‘genius of the place’, with your requirements, and produce a design that suits those objectives.</p></li>
-                                <li><p><strong>Build:</strong> Masonry, by definition, is practical in its uses; as landscape designers, we convert that functional aspect into an item of beauty.</p></li>
-                            </ul>
-                    </div>
-                </div>
-                <div class="caption-box" id="general-cap">
-                    <div class="cap-head"><h1>Publications</h1></div>
-                    <div class="cap-body">
-                            <ul id="ldb-list">
-                                <li><p><strong><a href="http://www.theperfecthome.com/books.aspx?bookID=11&stateID=32" target="_blank" alt="Go to theperfecthome.com">NYS Representative as seen in the Garden Bible, Perfect Home</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Captivating-Cottage-Mood.pdf" target="_blank" alt="View Captivating Cottage Mood PDF">Captivating Cottage Mood</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Great-Backyards-Fire-Pit.pdf" target="_blank" alt="View Great Backyards Fire Pit PDF">Great Backyard Fires</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Views-From-Every-AngleMontauk.pdf" target="_blank" alt="View Views from Every Angle PDF">Views from Every Angle</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Contoured-Ensemble.pdf" target="_blank" alt="View Contoured Ensemble PDF">Contoured Ensemble</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Laps-and-Lounging.pdf" target="_blank" alt="View Laps and Lounging PDF">Laps and Lounging</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/Peace-of-Paradise.pdf" target="_blank" alt="View Peace of Paradise PDF">Peace of Paradise</a></strong></p></li>
-                                <li><p><strong><a href="/pdfs/JCLA-hardcover-portfolio-2-23-10.pdf" target="_blank" alt="View JCLA Portfolio PDF">John Cowen Portfolio</a></strong></p></li>
-                            </ul>
-                    </div>
-                </div>
+        <img src="/Images/JC.png" alt="John Cowen stands in front of a landscaping job he and his team have completed">
+        <div class="caption-box">
+            <h1>John Cowen</h1>
+            <p>John Cowen has been living and working as a landscape designer in the Hamptons for the past 25+ years. Since 1994 he has operated his own design and build company.<br><br>The company has been involved in projects ranging from $500 to $2m+.<br><br>John has been involved in the landscape industry for 30+ years including 8 years of training as a Landscape Architect at Greenwich University, including a Horticultural degree equivalent from Merrist Wood College, Surrey, England.<br><br>The combined experience, professionalism and knowledge within John Cowen Landscape Associates Ltd. makes the company unique and stand out from other landscape companies in the Hamptons.</p>
+        </div>
+        <div class="awards">
+            <img src="/Images/asla-new-logo.png" alt="American Society of Landscape Architects Association Badge">
+            <img src="/Images/PulseOfTheCity/PULSE-RIBBON.png" alt="Pulse of the City Winner's Circle">
+            <img src="/Images/BUILD1@2x.png" alt="BUILD Architecture Awards - Best Landscape Design/Build Company">
+            <img src="/Images/BUILD3@2x.png" alt="BUILD Architecture Awards - Client Service Excellence">
+        </div>
+        <img id="schematic" src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by JCLA">
+        <div class="caption-box"><h1 id="ldb-head">Landscape. Design. Build.</h1>
+                <p>The concept is simple and the results have proven successful. We are involved from the beginning of a project when we meet with a client, through to the implementation and completion stages. This means that each project gets the specific attention it requires and you get the landscape you’ve always wanted.<br><br>Many projects evolve while we work. With ‘design and build’ it is much easier to accommodate the sometimes changing needs of a client throughout the entire project. The process has proven so successful in the past that we have many clients who return to us for additional projects.</p>
+        </div>
+        <div class="caption-box">
+            <h1>Publications</h1>
+                <ul id="pub-list">
+                    <li><p><strong><a href="http://www.theperfecthome.com/books.aspx?bookID=11&stateID=32" target="_blank" alt="Go to theperfecthome.com">NYS Representative as seen in the Garden Bible, Perfect Home</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/Captivating-Cottage-Mood.pdf" target="_blank" alt="View Captivating Cottage Mood PDF">Captivating Cottage Mood</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/Great-Backyards-Fire-Pit.pdf" target="_blank" alt="View Great Backyards Fire Pit PDF">Great Backyard Fires</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/Views-From-Every-AngleMontauk.pdf" target="_blank" alt="View Views from Every Angle PDF">Views from Every Angle</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/Contoured-Ensemble.pdf" target="_blank" alt="View Contoured Ensemble PDF">Contoured Ensemble</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/Laps-and-Lounging.pdf" target="_blank" alt="View Laps and Lounging PDF">Laps and Lounging</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/Peace-of-Paradise.pdf" target="_blank" alt="View Peace of Paradise PDF">Peace of Paradise</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/JCLA-hardcover-portfolio-2-23-10.pdf" target="_blank" alt="View JCLA Portfolio PDF">John Cowen Portfolio</a></strong></p></li>
+                </ul>
         </div>
     </main>
+    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a></small></footer>
 </body>
 </html>
