--- a/pages/contact.html
+++ b/pages/contact.html
@@ -74,41 +74,40 @@
     </nav>
     <!-- Exit Nav -->
     <main>
-        <div class="content-box" id="info-box">
-                <div class="contact-grid">
-                    <div id="info-text">
-                        <p>John Cowen Landscape Associates LTD.
-                            <br><br>
-                            5 Cove Rd.
-                            Southampton, NY 11968
-                            <br><br>
-                            <strong>T:</strong> <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">631-725-3410</a>
-                            <br><br>
-                            <strong>E:</strong> <a href="mailto:john@johncowenlandscape.com" alt="Email John Cowen Landscape Associates">john@johncowenlandscape.com</a></p>
-                    </div>
-                        <iframe id="info-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3013.8096062129953!2d-72.40726698458805!3d40.94183977930743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e89417828614a1%3A0xcbb27c9d10368a51!2s5%20Cove%20Rd%2C%20Southampton%2C%20NY%2011968!5e0!3m2!1sen!2sus!4v1608351278394!5m2!1sen!2sus" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                    <div id="info-form">
-                        <form name="jcla-contact" method="POST" data-netlify="true" action="/pages/contact.html">
-                            <p>
-                              <label><strong>Full Name:</strong><br><input class="contact-field" type="text" name="name" required/></label>   
-                            </p>
-                            <p>
-                              <label><strong>Email:</strong><br><input class="contact-field" type="email" name="email" required/></label>
-                            </p>
-                            <p>
-                              <label><strong>Phone:</strong><br><input class="contact-field" type="tel" name="phone" required/></label>
-                            </p>
-                            <p>
-                              <label><strong>Message:</strong><br>
-                                <textarea name="message" required></textarea></label>
-                            </p>
-                            <p>
-                              <button type="submit" id="submit-button">Send</button>
-                            </p>
-                          </form>
-                    </div>
-                </div>
+        <div class="contact-grid">
+            <div id="info-text">
+                <p>John Cowen Landscape Associates LTD.
+                    <br><br>
+                    5 Cove Rd.
+                    Southampton, NY 11968
+                    <br><br>
+                    <strong>T:</strong> <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a>
+                    <br><br>
+                    <strong>E:</strong> <a href="mailto:john@johncowenlandscape.com" alt="Email John Cowen Landscape Associates">john@johncowenlandscape.com</a></p>
+            </div>
+                <iframe id="info-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3013.8096062129953!2d-72.40726698458805!3d40.94183977930743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e89417828614a1%3A0xcbb27c9d10368a51!2s5%20Cove%20Rd%2C%20Southampton%2C%20NY%2011968!5e0!3m2!1sen!2sus!4v1608351278394!5m2!1sen!2sus" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <div id="info-form">
+                <form name="jcla-contact" method="POST" data-netlify="true" action="/pages/contact.html">
+                    <p>
+                        <label><strong>Full Name:</strong><br><input class="contact-field" type="text" name="name" required/></label>   
+                    </p>
+                    <p>
+                        <label><strong>Email:</strong><br><input class="contact-field" type="email" name="email" required/></label>
+                    </p>
+                    <p>
+                        <label><strong>Phone:</strong><br><input class="contact-field" type="tel" name="phone" required/></label>
+                    </p>
+                    <p>
+                        <label><strong>Message:</strong><br>
+                        <textarea name="message" required></textarea></label>
+                    </p>
+                    <p>
+                        <button type="submit" id="submit-button">Send</button>
+                    </p>
+                    </form>
+            </div>
         </div>
     </main>
+    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a></small></footer>
 </body>
 </html>
