--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="JCLA is a design build company based in Sag Harbor NY. We have been in business designing and implementing landscapes throughout the Hampton’s and the tri-state area since 1994.">
+<meta name="description" content="John Cowen Landscape Associates Ltd. is a design build company based in Sag Harbor NY. We have been in business designing and implementing landscapes throughout the Hampton’s and the tri-state area since 1994.">
 <meta name="keywords" content="john cowen, landscape architecture, landscape, landscaping, landscape architects, jcla, southhampton, hamptons, new york">
 <meta name="robots" content="index, follow">
 <title>John Cowen Landscape Associates</title>
 <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
 <link href="/jcla.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="/flickity.css" media="screen">
 </head>
 
 <body>
@@ -74,20 +73,62 @@
     </nav>
     <!-- Exit Nav -->
     <main>
-        <div class="content-box" id="home-box">
-            <div class="home-gal">
-            <script src="/flickity.pkgd.min.js"></script>
-            <div class="main-carousel" data-flickity='{ "autoPlay": "2000", "cellAlign": "left", "contain": true, "wrapAround": true }' aria-label="gallery">
-                <div class="carousel-cell"><a href="/pages/categories/cottages.html" alt="Go to Cottages"><img src="Images/NewPhotos/COTTAGE/Cottages0.jpeg" alt=""></a></div>
-                <div class="carousel-cell"><a href="/pages/categories/estates.html" alt="Go to Estates"><img src="Images/NewPhotos/ESTATES/Estates0.jpg" alt=""></a></div>
-                <div class="carousel-cell"><a href="pages/categories/plantings.html" alt="Go to Plantings"><img src="Images/NewPhotos/GARDEN/Garden0.jpg" alt=""></a></div>
-                <div class="carousel-cell"><a href="/pages/categories/pools.html" alt="Go to Pool Gardens"><img src="Images/NewPhotos/PLANTING/Planting2.jpeg" alt=""></a></div>
-                <div class="carousel-cell"><a href="/pages/categories/specialty.html" alt="Go to Specialty"><img src="Images/PrevPhotos/Specialty/Specialty5.jpg" alt=""></a></div>
-                <div class="carousel-cell"><a href="/pages/categories/singlefamily.html" alt="Go to Single Family"><img src="Images/PrevPhotos/SingleFamily/SingleFamily8.jpg" alt=""></a></div>
-                <div class="carousel-cell"><a href="/pages/categories/waterfront.html" alt="Go to Waterfront"><img src="Images/PrevPhotos/Home/Waterfront.jpg" alt=""></a></div>
+        <script src="/flickity.pkgd.min.js"></script>
+        <div class="main-carousel" data-flickity='{ "autoPlay": "2000", "wrapAround": true }' aria-label="carousel">
+            <div class="carousel-cell">
+                <a href="/pages/categories/cottages.html" alt="Go to Cottages">
+                    <img src="Images/NewPhotos/COTTAGE/Cottages0.jpeg" alt="">
+                </a>
             </div>
+            <div class="carousel-cell">
+                <a href="/pages/categories/estates.html" alt="Go to Estates">
+                    <img src="Images/NewPhotos/ESTATES/Estates0.jpg" alt="">
+                </a>
+            </div>
+            <div class="carousel-cell">
+                <a href="pages/categories/plantings.html" alt="Go to Plantings">
+                    <img src="Images/NewPhotos/GARDEN/Garden0.jpg" alt="">
+                </a>
+            </div>
+            <div class="carousel-cell">
+                <a href="/pages/categories/pools.html" alt="Go to Pool Gardens">
+                    <img src="Images/NewPhotos/PLANTING/Planting2.jpeg" alt="">
+                </a>
+            </div>
+            <div class="carousel-cell">
+                <a href="/pages/categories/specialty.html" alt="Go to Specialty">
+                    <img src="Images/PrevPhotos/Specialty/Specialty5.jpg" alt="">
+                </a>
+            </div>
+            <div class="carousel-cell">
+                <a href="/pages/categories/singlefamily.html" alt="Go to Single Family">
+                    <img src="Images/PrevPhotos/SingleFamily/SingleFamily8.jpg" alt="">
+                </a>
+            </div>
+            <div class="carousel-cell">
+                <a href="/pages/categories/waterfront.html" alt="Go to Waterfront">
+                    <img src="Images/PrevPhotos/Home/Waterfront.jpg" alt="">
+                </a>
             </div>
         </div>
+        <div class="ldb">
+            <div class="ldb-part" id="l-part">
+                <h3>Landscape</h3>
+                <img src="/Images/landscape1.jpg" alt="">
+                <p>We pride ourselves on our extensive landscape knowledge, experience and ability to carry out projects of all kinds.</p>
+            </div>
+            <div class="ldb-part" id="d-part">
+                <h3>Design</h3>
+                <img src="/Images/Design1.jpg" alt="">
+                <p>Our philosophy: synthesize the ‘genius of the place’, with your requirements, and produce a design that suits those objectives.</p>
+            </div>
+            <div class="ldb-part" id="b-part">
+                <h3>Build</h3>
+                <img src="/Images/build1.jpg" alt="">
+                <p>Masonry, by definition, is practical in its uses; as landscape designers, we convert that functional aspect into an item of beauty.</p>
+            </div>
+            </div>
     </main>
+    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a></small></footer>
 </body>
 </html>
