--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
 <meta name="description" content="JCLA is a design build company based in Sag Harbor NY. We have been in business designing and implementing landscapes throughout the Hampton’s and the tri-state area since 1994.">
 <meta name="keywords" content="john cowen, landscape architecture, landscape, landscaping, landscape architects, jcla, southhampton, hamptons, new york, about">
 <meta name="robots" content="index, follow">
-<title>About | JCLA</title>
+<title>About | JCLA Ltd.</title>
 <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
 <link href="/jcla.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="/flickity.css" media="screen">
@@ -85,7 +85,7 @@
             <img src="/Images/BUILD1@2x.png" alt="BUILD Architecture Awards - Best Landscape Design/Build Company">
             <img src="/Images/BUILD3@2x.png" alt="BUILD Architecture Awards - Client Service Excellence">
         </div>
-        <img id="schematic" src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by JCLA">
+        <img id="schematic" src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by JCLA Ltd.">
         <div class="caption-box"><h1 id="ldb-head">Landscape. Design. Build.</h1>
                 <p>The concept is simple and the results have proven successful. We are involved from the beginning of a project when we meet with a client, through to the implementation and completion stages. This means that each project gets the specific attention it requires and you get the landscape you’ve always wanted.<br><br>Many projects evolve while we work. With ‘design and build’ it is much easier to accommodate the sometimes changing needs of a client throughout the entire project. The process has proven so successful in the past that we have many clients who return to us for additional projects.</p>
         </div>
@@ -99,7 +99,7 @@
                     <li><p><strong><a href="/pdfs/Contoured-Ensemble.pdf" target="_blank" alt="View Contoured Ensemble PDF">Contoured Ensemble</a></strong></p></li>
                     <li><p><strong><a href="/pdfs/Laps-and-Lounging.pdf" target="_blank" alt="View Laps and Lounging PDF">Laps and Lounging</a></strong></p></li>
                     <li><p><strong><a href="/pdfs/Peace-of-Paradise.pdf" target="_blank" alt="View Peace of Paradise PDF">Peace of Paradise</a></strong></p></li>
-                    <li><p><strong><a href="/pdfs/JCLA-hardcover-portfolio-2-23-10.pdf" target="_blank" alt="View JCLA Portfolio PDF">John Cowen Portfolio</a></strong></p></li>
+                    <li><p><strong><a href="/pdfs/JCLA-hardcover-portfolio-2-23-10.pdf" target="_blank" alt="View John Cowen Portfolio PDF">John Cowen Portfolio</a></strong></p></li>
                 </ul>
         </div>
     </main>
