ltd and no-cap fixe

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
                         </div>
                         <div id="home-name">
                             <div id="home-first">John Cowen</div>
-                            <div id="home-last">Landscape Associates</div>
+                            <div id="home-last">Landscape Associates Ltd.</div>
                         </div>
                     </div>
                 </a>
@@ -85,6 +85,6 @@
             </div>
         </div>
     </main>
-    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a></small></footer>
+    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates Ltd.">(631) 725-3410</a></small></footer>
 </body>
 </html>
