--- a/pages/logo-tester.html
+++ b/pages/logo-tester.html
@@ -125,6 +125,6 @@
             </div>
             </div>
     </main>
-    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a></small></footer>
+    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates Ltd.">(631) 725-3410</a></small></footer>
 </body>
 </html>
