--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
                         </div>
                         <div id="home-name">
                             <div id="home-first">John Cowen</div>
-                            <div id="home-last">Landscape Associates</div>
+                            <div id="home-last">Landscape Associates Ltd.</div>
                         </div>
                     </div>
                 </a>
@@ -81,9 +81,9 @@
                     5 Cove Rd.
                     Southampton, NY 11968
                     <br><br>
-                    <strong>T:</strong> <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a>
+                    <strong>T:</strong> <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates Ltd.">(631) 725-3410</a>
                     <br><br>
-                    <strong>E:</strong> <a href="mailto:john@johncowenlandscape.com" alt="Email John Cowen Landscape Associates">john@johncowenlandscape.com</a></p>
+                    <strong>E:</strong> <a href="mailto:john@johncowenlandscape.com" alt="Email John Cowen Landscape Associates Ltd.">john@johncowenlandscape.com</a></p>
             </div>
                 <iframe id="info-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3013.8096062129953!2d-72.40726698458805!3d40.94183977930743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e89417828614a1%3A0xcbb27c9d10368a51!2s5%20Cove%20Rd%2C%20Southampton%2C%20NY%2011968!5e0!3m2!1sen!2sus!4v1608351278394!5m2!1sen!2sus" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div id="info-form">
@@ -108,6 +108,6 @@
             </div>
         </div>
     </main>
-    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates">(631) 725-3410</a></small></footer>
+    <footer><small>John Cowen Landscape Associates Ltd. • 5 Cove Rd., Southampton, NY 11968 • <a href="tel:631-725-3410" alt="Call John Cowen Landscape Associates Ltd.">(631) 725-3410</a></small></footer>
 </body>
 </html>
