--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-    <!-- Enter Header -->
+     <!-- Enter Header -->
     <header>
             <div id="head-box">
                 <a href="/index.html" alt="Go to Homepage">
                     <div id="home-button" aria-label="home button">
                         <div id="home-logo">
-                            <div id="jcla-shape"></div>
+                            <img id="org-logo" src="/Images/OriginalLogo300px.png" alt="">
                         </div>
                         <div id="home-name">
                             <div id="home-first">John Cowen</div>
