ldb again, trying a transition

--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
             </div>
         </div>
         <div class="ldb">
-            <div class="ldb-part" id="l-part">
+            <div class="ldb-part">
                 <h3>Landscape</h3>
                 <img src="/Images/landscape1.jpg" alt="">
                 <p>We pride ourselves on our extensive landscape knowledge, experience and ability to carry out projects of all kinds.</p>
             </div>
-            <div class="ldb-part" id="d-part">
+            <div class="ldb-part">
                 <h3>Design</h3>
                 <img src="/Images/Design1.jpg" alt="">
                 <p>Our philosophy: synthesize the ‘genius of the place’, with your requirements, and produce a design that suits those objectives.</p>
             </div>
-            <div class="ldb-part" id="b-part">
+            <div class="ldb-part">
                 <h3>Build</h3>
                 <img src="/Images/build1.jpg" alt="">
                 <p>Masonry, by definition, is practical in its uses; as landscape designers, we convert that functional aspect into an item of beauty.</p>
