specialty text + minus flickity css doc

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <meta name="description" content="JCLA is a design build company based in Sag Harbor NY. We have been in business designing and implementing landscapes throughout the Hampton’s and the tri-state area since 1994.">
 <meta name="keywords" content="john cowen, landscape architecture, landscape, landscaping, landscape architects, jcla, southhampton, hamptons, new york">
 <meta name="robots" content="noindex, nofollow">
-<title>Page Not Found | JCLA Ltd.</title>
+<title>Page Not Found | John Cowen Landscape Associates Ltd.</title>
 <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
 <link href="/jcla.css" rel="stylesheet" type="text/css">
 </head>
