home cap and main adjustments

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
                 </a>
             </div>
         </div>
+        <div class="caption-box">
+            <h1>John Cowen Landscape Associates Ltd.</h1>
+            <p>Whatever the scale of the project, JCLA is committed to designing, implementing, and maintaining high-quality landscape schemes which meet our client’s aspirations and needs.</p>
+        </div>
         <div class="ldb">
             <div class="ldb-part">
                 <h3>Landscape</h3>
