--- a/pages/about.html
+++ b/pages/about.html
@@ -73,7 +73,7 @@
     </nav>
     <!-- Exit Nav -->
     <main>
-        <img src="/Images/JC.png" alt="John Cowen stands in front of a landscaping job he and his team have completed">
+        <img src="/Images/JC.JPG" alt="John Cowen stands in front of a landscaping job he and his team have completed">
         <div class="caption-box">
             <h1>John Cowen</h1>
             <p>John Cowen has been living and working as a landscape designer in the Hamptons for the past 25+ years. Since 1994 he has operated his own design and build company.<br><br>The company has been involved in projects ranging from $500 to $2m+.<br><br>John has been involved in the landscape industry for 30+ years including 8 years of training as a Landscape Architect at Greenwich University, including a Horticultural degree equivalent from Merrist Wood College, Surrey, England.<br><br>The combined experience, professionalism and knowledge within John Cowen Landscape Associates Ltd. makes the company unique and stand out from other landscape companies in the Hamptons.</p>
