about-img proportions

--- a/pages/about.html
+++ b/pages/about.html
@@ -73,7 +73,7 @@
     </nav>
     <!-- Exit Nav -->
     <main>
-        <img src="/Images/JC.JPG" alt="John Cowen stands in front of a landscaping job he and his team have completed">
+        <img class="about-img" src="/Images/JC.JPG" alt="John Cowen stands in front of a landscaping job he and his team have completed">
         <div class="caption-box">
             <h1>John Cowen</h1>
             <p>John Cowen has been living and working as a landscape designer in the Hamptons for the past 25+ years. Since 1994 he has operated his own design and build company.<br><br>The company has been involved in projects ranging from $500 to $2m+.<br><br>John has been involved in the landscape industry for 30+ years including 8 years of training as a Landscape Architect at Greenwich University, including a Horticultural degree equivalent from Merrist Wood College, Surrey, England.<br><br>The combined experience, professionalism and knowledge within John Cowen Landscape Associates Ltd. makes the company unique and stand out from other landscape companies in the Hamptons.</p>
@@ -84,7 +84,7 @@
             <img src="/Images/BUILD1@2x.png" alt="BUILD Architecture Awards - Best Landscape Design/Build Company">
             <img src="/Images/BUILD3@2x.png" alt="BUILD Architecture Awards - Client Service Excellence">
         </div>
-        <img id="schematic" src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by John Cowen Landscape Associates Ltd.">
+        <img class="about-img" id="schematic" src="/Images/SCHEMATIC.png" alt="Draft of a proposed project by John Cowen Landscape Associates Ltd.">
         <div class="caption-box"><h1 id="ldb-head">Landscape. Design. Build.</h1>
                 <p>The concept is simple and the results have proven successful. We are involved from the beginning of a project when we meet with a client, through to the implementation and completion stages. This means that each project gets the specific attention it requires and you get the landscape you’ve always wanted.<br><br>Many projects evolve while we work. With ‘design and build’ it is much easier to accommodate the sometimes changing needs of a client throughout the entire project. The process has proven so successful in the past that we have many clients who return to us for additional projects.</p>
         </div>
